errorsky.txt
tea
Activating virtual environment...
Virtual environment activated
  File "...../teatime-accessibility/bin/teatime.py", line 1966
    (model, iter) = selection.get_selected()
    ^
IndentationError: expected an indented block after function definition on line 1965
